# tpm-automation-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  fly.toml  main.py  pyproject.toml
.github/workflows/: ci.yml  drift-daily.yml
collectors/: __init__.py  jira.py  models.py
drift/: __init__.py  graph.py  notify.py  pipeline.py  rules.py
narrative/: __init__.py  drift_digest.py  models.py
narrative/templates/: drift_digest.md
scripts/: capture_fixtures.py
seed/: __init__.py  jira_client.py  manifest.json  scenario.py  seed_demo.py
store/: __init__.py  models.py  snapshot_store.py
tests/: test_collector.py  test_graph.py  test_health.py  test_narrative.py  test_notify.py  test_rules.py  test_store.py
tests/fixtures/: rc1_changelog_nodates.json  rc1_changelog_slip.json  rc1_search_drift_demo.json
