[project]
name = "tpm-automation-platform"
version = "0.1.0"
description = "TPM automation platform — Dependency Drift Detector and shared collectors/store/narrative for TPM tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Reid Collins" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "networkx>=3.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Flat module layout: the domain packages plus the FastAPI entrypoint modules.
packages = ["collectors", "store", "narrative", "drift"]
py-modules = ["main", "config"]

[tool.setuptools.package-data]
narrative = ["templates/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
